fix spacing of sliders

--- a/frontend/popup.css
+++ b/frontend/popup.css
@@ -184,6 +184,27 @@ body {
   color: #999;
 }
 
+/* Slider styles */
+#samplingRateContainer,
+#wordDifficultyContainer,
+#phraseLengthContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#samplingRateLabel,
+#wordDifficultyLabel,
+#phraseLengthLabel {
+  /* width: 20%; */
+}
+/* #samplingRateSlider,
+#wordDifficultySlider,
+#phraseLengthSlider {
+  width: 100%;
+  height: 50%;
+}  */
+
 /* Dropdown styles */
 .dropbtn {
   background-color: #4caf50;
